log/build_2024-09-11_20-04-38/robotics_trial/stderr.log
  File "/root/project_root/install/robotics_trial/lib/python3.10/site-packages/robotics_trial/map_publisher.py", line 35
    self.get_logger().info('Publishing: ', % oc_grid.data)
                                           ^
SyntaxError: invalid syntax

